@@ -8,6 +8,7 @@ Open Vehicle Monitor System v3 - Change log
                          - Boot/Autostart: crash detection & counting, temporary autostart inhibit
                          - Webserver: show boot status, shell command output streaming & history
                          - Network: New 'network status' command to show IP networking status
+                         - Simcom: Check MUX status in NetWait state
 
 2018-03-05 MWJ  3.0.991  OTA release support OTA updates over HTTP
                          - Update ovms_module to use new API for per-task heap info.
